thinwedge-rs/tui/src/chatwidget/snapshots/thinwedge_tui__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Waiting for 2 agents
  └ Robie [pricing_researcher]
    Ada [reviewer]


• Finished waiting
  └ Robie [pricing_researcher]: Completed - Done
    Ada [reviewer]: Running
