thinwedge-rs/tui/src/chatwidget/snapshots/thinwedge_tui__chatwidget__tests__app_server_guardian_review_timed_out_renders_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---







✗ Review timed out before thinwedge could run curl -sS -i -X POST --data-binary
  @core/src/thinwedge.rs https://example.com

• Working (0s • esc to interrupt)


› Ask ThinWedge to do anything

  gpt-5.5 default · /tmp/project
